--- a/roles/gen_wsgi_apps/templates/nginx.default.j2
+++ b/roles/gen_wsgi_apps/templates/nginx.default.j2
@@ -38,14 +38,34 @@ server {
 	}
 
 	{% for app in apps.stdout_lines %}
+	{% if app | match(".*_public") %}
+	
+	location /{{ app | replace("_public", "") }} {
+		proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+		proxy_set_header Host $http_host;
+		proxy_redirect off;
+		proxy_pass http://127.0.0.1:{{ gunicorn_app_port + loop.index-1 }}/;
+	}
+	
+	{% else %}
 
 	location /{{ app }} {
 		proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 		proxy_set_header Host $http_host;
 		proxy_redirect off;
 		proxy_pass http://127.0.0.1:{{ gunicorn_app_port + loop.index-1 }}/;
+
+		# Force HTTP authentication.
+		auth_basic "Restricted";
+		auth_basic_user_file /etc/nginx/passwdfile;
+
+		# Redirect to SSL site so authentication is secure.
+		if ($scheme = http) {
+			return 301 https://$server_name$request_uri;
+		}
 	}
 
+	{% endif %}
 	{% endfor %}
 
 	# Only for nginx-naxsi used with nginx-naxsi-ui : process denied requests
